# jkdns

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  compile_commands.json
src/: logger.h  main.c  main_old.c
src/connection/: connection.c  connection.h
src/core/: buffer.h  connection.h  decl.h  errors.h  ev_backend.c  ev_backend.h  event.c  event.h  ht.c  ht.h  htt.c  htt.h  io.h  listener.h  net.h  time.c  time.h  udp_socket.h  udp_wq.c  udp_wq.h
src/echo/: echo_handler.c  echo_handler.h  echo_proxy_handler.c  echo_proxy_handler.h
src/logger/: logger.c  logger.h
src/os/linux/: connection.c  io.c  listener.c  logger.c  net.c  time.c  udp_socket.c
src/os/linux/backends/: epoll_backend.c
src/session/: tcp.c  tcp.h
src/settings/: settings.c  settings.h
src/udp_socket/: udp_socket.c  udp_socket.h
